src/objects/ProductRequestLineItem.object
<CustomObject>
    <fields>
        <fullName>CompanyCode__c</fullName>
        <description>Used for integration purposes</description>
        <formula>Product2.Company_Code__c</formula>
        <label>Company Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERPQtyReceived__c</fullName>
        <label>Quantity Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERPQtyShipped__c</fullName>
        <label>Quantity Ready To Pick Up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERPQtyTransfer__c</fullName>
        <label>ERP Requested Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERPTransDate__c</fullName>
        <label>Last ERP Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProductSKU__c</fullName>
        <description>Product Article</description>
        <formula>Product2.Article__c</formula>
        <label>Article (SKU)</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_ProductRequestLineItems</fullName>
        <filterScope>Everything</filterScope>
        <label>All Product Request Line Items</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>